perf: bkmonitorbeat 序列化性能优化

--- a/pkg/bkmonitorbeat/Makefile
+++ b/pkg/bkmonitorbeat/Makefile
@@ -3,12 +3,12 @@ BUILD_NO ?= 0
 NAME = bkmonitorbeat
 VERSION = ''
 COMMIT_ID = ''
+PERF_MODE ?= 0
 
 .PHONY: build
 build:
-	env VERSION=$(VERSION) RELEASE_PATH=$(RELEASE_PATH) ./script/gse_package.sh
+	env VERSION=$(VERSION) RELEASE_PATH=$(RELEASE_PATH) PERF_MODE=$(PERF_MODE) ./script/gse_package.sh
 
 .PHONY: test
 test:
 	go test ./...
-
